--- a/src/Features/Core/Portable/FeaturesResources.resx
+++ b/src/Features/Core/Portable/FeaturesResources.resx
@@ -1580,11 +1580,11 @@ This version used in: {2}</value>
   <data name="Remove_unused_parameter_0_if_it_is_not_part_of_a_shipped_public_API" xml:space="preserve">
     <value>Remove unused parameter '{0}' if it is not part of a shipped public API</value>
   </data>
-  <data name="Remove_unused_parameter_0_if_it_is_not_part_of_a_shipped_public_API_its_initial_value_is_never_used" xml:space="preserve">
-    <value>Remove unused parameter '{0}' if it is not part of a shipped public API, its initial value is never used</value>
+  <data name="Parameter_0_can_be_removed_if_it_is_not_part_of_a_shipped_public_API_its_initial_value_is_never_used" xml:space="preserve">
+    <value>Parameter '{0}' can be removed if it is not part of a shipped public API, its initial value is never used</value>
   </data>
-  <data name="Remove_unused_parameter_0_its_initial_value_is_never_used" xml:space="preserve">
-    <value>Remove unused parameter '{0}', its initial value is never used</value>
+  <data name="Parameter_0_can_be_removed_its_initial_value_is_never_used" xml:space="preserve">
+    <value>Parameter '{0}' can be removed, its initial value is never used</value>
   </data>
   <data name="Merge_with_nested_0_statement" xml:space="preserve">
     <value>Merge with nested '{0}' statement</value>
